[tool.poetry]
name = "mergefast"
version = "1.1.2"
description = ""
authors = ["Adam Gordon Bell <adam@corecursive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
