[tool.poetry]
name = "mergefast"
version = "1.1.3"
description = ""
authors = ["Adam Gordon Bell <adam@corecursive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"
setuptools-rust = "^1.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core", "setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.setuptools]
# name = "mergefast"
# version = "1.1.3"

# [tool.setuptools.extension."mergefast.core"]
# sources = ["mergefast/bind.c", "mergefast/core.c"]
# include_dirs = ["mergefast"]
# extra_compile_args = ["-O3"]
